--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: #101922;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 header {
@@ -22,11 +23,45 @@ nav>a {
     margin: 10px;
 }
 
-.loguin:first-child {
-    border: 1px solid white
-}
-
 .loguin>a {
     text-decoration: none;
     margin: 5px;
+    padding: 8PX;
+    border-radius: 11px;
+
+}
+
+.loguin a:first-child {
+    background-color: #0F2B45;
+    color: #1173D4;
+}
+
+.loguin a:last-child {
+    color: #FFFFFF;
+    background-color: #334155;
+}
+
+img {
+    width: 100%;
+    height: auto;
+    display: block
+}
+
+.busqueda {
+    position: relative;
+    display: inline-block;
+    text-align: center;
+}
+
+.title,
+.paragrahp,
+.svg,
+.buscar {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+
+    border-radius: 5px;
 }
